# NeuRep_GWOT_mouse

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
config/: ta_paper.yaml
example/: 01_load_spike-data_using_AllenSDK.ipynb  02_execute_unsupervised_alignment.ipynb
scripts/: ta_paper_group_alignment.py  ta_paper_group_evaluation.py  ta_paper_ind_alignment.py  ta_paper_ind_evaluation.py
session_split/: num_efficient_neurons.csv  num_efficient_neurons_all_st.csv  pairs_dict_ind.json  session_split_15.csv  session_split_4.csv  session_split_8.csv
setting_files/: dummy_group_alignment_setting.csv  dummy_ind_alignment_setting.csv  ta_paper_group_alignment_setting.csv  ta_paper_ind_alignment_setting.csv
src/neurep_gwot_mouse/alignment/: fig_funcs.py  ta_paper_group.py  ta_paper_ind.py
src/neurep_gwot_mouse/allen_brain_toolbox/: data_loader.py
src/neurep_gwot_mouse/allen_brain_toolbox/data_interface/neuropixel/: session_to_data.py  utils.py
src/neurep_gwot_mouse/allen_brain_toolbox/rdms/: __init__.py  pipeline.py  postprocessing.py  preprocessing.py  rdms.py
src/neurep_gwot_mouse/allen_brain_toolbox/tphate/: __init__.py  api.py  base.py  graphs.py  matrix.py  mds.py  tphate.py  utils.py  vne.py
src/neurep_gwot_mouse/allen_brain_toolbox/visualization/: visualization.py
