[project]
name = "neurep-gwot-mouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp==3.7.4 ; python_full_version == '3.9.2'",
    "alembic==1.14.0 ; python_full_version == '3.9.2'",
    "allensdk==2.14.0 ; python_full_version == '3.9.2'",
    "annotated-types==0.7.0 ; python_full_version == '3.9.2'",
    "anyio==4.6.2.post1 ; python_full_version == '3.9.2'",
    "aplus==0.11.0 ; python_full_version == '3.9.2'",
    "appnope==0.1.4 ; python_full_version == '3.9.2' and sys_platform == 'darwin'",
    "argon2-cffi==23.1.0 ; python_full_version == '3.9.2'",
    "argon2-cffi-bindings==21.2.0 ; python_full_version == '3.9.2'",
    "argschema==3.0.4 ; python_full_version == '3.9.2'",
    "arrow==1.3.0 ; python_full_version == '3.9.2'",
    "astropy==6.0.1 ; python_full_version == '3.9.2'",
    "astropy-iers-data==0.2024.12.2.0.35.34 ; python_full_version == '3.9.2'",
    "asttokens==3.0.0 ; python_full_version == '3.9.2'",
    "async-lru==2.0.4 ; python_full_version == '3.9.2'",
    "async-timeout==3.0.1 ; python_full_version == '3.9.2'",
    "attrs==24.2.0 ; python_full_version == '3.9.2'",
    "babel==2.16.0 ; python_full_version == '3.9.2'",
    "beautifulsoup4==4.12.3 ; python_full_version == '3.9.2'",
    "binaryornot==0.4.4 ; python_full_version == '3.9.2'",
    "blake3==1.0.0 ; python_full_version == '3.9.2'",
    "bleach==6.2.0 ; python_full_version == '3.9.2'",
    "blosc2==2.5.1 ; python_full_version == '3.9.2'",
    "boto3==1.17.21 ; python_full_version == '3.9.2'",
    "botocore==1.20.112 ; python_full_version == '3.9.2'",
    "bqplot==0.12.43 ; python_full_version == '3.9.2'",
    "branca==0.8.0 ; python_full_version == '3.9.2'",
    "cachetools==4.2.4 ; python_full_version == '3.9.2'",
    "cebra[datasets,demos]==0.1.0 ; python_full_version == '3.9.2'",
    "certifi==2024.8.30 ; python_full_version == '3.9.2'",
    "cffi==1.17.1 ; python_full_version == '3.9.2'",
    "cftime==1.6.4.post1 ; python_full_version == '3.9.2'",
    "chardet==3.0.4 ; python_full_version == '3.9.2'",
    "charset-normalizer==3.4.0 ; python_full_version == '3.9.2'",
    "click==8.1.7 ; python_full_version == '3.9.2'",
    "cloudpickle==3.1.0 ; python_full_version == '3.9.2'",
    "colorama==0.4.6 ; python_full_version == '3.9.2' and sys_platform == 'win32'",
    "colorlog==6.9.0 ; python_full_version == '3.9.2'",
    "comm==0.2.2 ; python_full_version == '3.9.2'",
    "cookiecutter==2.6.0 ; python_full_version == '3.9.2'",
    "cycler==0.12.1 ; python_full_version == '3.9.2'",
    "cython==3.0.11 ; python_full_version == '3.9.2'",
    "dask[dataframe]==2024.2.1 ; python_full_version == '3.9.2'",
    "debugpy==1.8.9 ; python_full_version == '3.9.2'",
    "decorator==5.1.1 ; python_full_version == '3.9.2'",
    "defusedxml==0.7.1 ; python_full_version == '3.9.2'",
    "deprecated==1.2.15 ; python_full_version == '3.9.2'",
    "distro==1.9.0 ; python_full_version == '3.9.2'",
    "eli5==0.13.0 ; python_full_version == '3.9.2'",
    "et-xmlfile==1.1.0 ; python_full_version == '3.9.2'",
    "exceptiongroup==1.2.2 ; python_full_version == '3.9.2'",
    "executing==2.1.0 ; python_full_version == '3.9.2'",
    "fastapi==0.115.5 ; python_full_version == '3.9.2'",
    "fastjsonschema==2.21.0 ; python_full_version == '3.9.2'",
    "ffmpeg==1.4 ; python_full_version == '3.9.2'",
    "ffmpeg-python==0.2.0 ; python_full_version == '3.9.2'",
    "filelock==3.16.1 ; python_full_version == '3.9.2'",
    "fqdn==1.5.1 ; python_full_version == '3.9.2'",
    "frozendict==2.4.6 ; python_full_version == '3.9.2'",
    "fsspec==2024.10.0 ; python_full_version == '3.9.2'",
    "future==0.18.3 ; python_full_version == '3.9.2'",
    "geomstats==2.5.0 ; python_full_version == '3.9.2'",
    "glymur==0.8.19 ; python_full_version == '3.9.2'",
    "graphtools==1.5.3 ; python_full_version == '3.9.2'",
    "graphviz==0.20.3 ; python_full_version == '3.9.2'",
    "greenlet==3.1.1 ; (python_full_version == '3.9.2' and platform_machine == 'AMD64') or (python_full_version == '3.9.2' and platform_machine == 'WIN32') or (python_full_version == '3.9.2' and platform_machine == 'aarch64') or (python_full_version == '3.9.2' and platform_machine == 'amd64') or (python_full_version == '3.9.2' and platform_machine == 'ppc64le') or (python_full_version == '3.9.2' and platform_machine == 'win32') or (python_full_version == '3.9.2' and platform_machine == 'x86_64')",
    "h11==0.14.0 ; python_full_version == '3.9.2'",
    "h5py==3.12.1 ; python_full_version == '3.9.2'",
    "hdf5storage==0.1.19 ; python_full_version == '3.9.2'",
    "hdmf==3.14.5 ; python_full_version == '3.9.2'",
    "httpcore==1.0.7 ; python_full_version == '3.9.2'",
    "httptools==0.6.4 ; python_full_version == '3.9.2'",
    "httpx==0.28.0 ; python_full_version == '3.9.2'",
    "idna==3.10 ; python_full_version == '3.9.2'",
    "imageio==2.36.1 ; python_full_version == '3.9.2'",
    "importlib-metadata==8.5.0 ; python_full_version == '3.9.2'",
    "importlib-resources==6.4.5 ; python_full_version == '3.9.2'",
    "iniconfig==2.0.0 ; python_full_version == '3.9.2'",
    "ipydatawidgets==4.3.5 ; python_full_version == '3.9.2'",
    "ipykernel==6.29.5 ; python_full_version == '3.9.2'",
    "ipyleaflet==0.19.2 ; python_full_version == '3.9.2'",
    "ipympl==0.9.4 ; python_full_version == '3.9.2'",
    "ipython==8.18.1 ; python_full_version == '3.9.2'",
    "ipython-genutils==0.2.0 ; python_full_version == '3.9.2'",
    "ipyvolume==0.6.3 ; python_full_version == '3.9.2'",
    "ipyvue==1.11.2 ; python_full_version == '3.9.2'",
    "ipyvuetify==1.10.0 ; python_full_version == '3.9.2'",
    "ipywebrtc==0.6.0 ; python_full_version == '3.9.2'",
    "ipywidgets==8.1.5 ; python_full_version == '3.9.2'",
    "isoduration==20.11.0 ; python_full_version == '3.9.2'",
    "japanize-matplotlib==1.1.3 ; python_full_version == '3.9.2'",
    "jax==0.4.18 ; python_full_version == '3.9.2'",
    "jaxlib==0.4.18 ; python_full_version == '3.9.2'",
    "jedi==0.19.2 ; python_full_version == '3.9.2'",
    "jinja2==3.1.4 ; python_full_version == '3.9.2'",
    "jmespath==0.10.0 ; python_full_version == '3.9.2'",
    "joblib==1.4.2 ; python_full_version == '3.9.2'",
    "json5==0.10.0 ; python_full_version == '3.9.2'",
    "jsonpointer==3.0.0 ; python_full_version == '3.9.2'",
    "jsonschema[format-nongpl]==4.23.0 ; python_full_version == '3.9.2'",
    "jsonschema-specifications==2024.10.1 ; python_full_version == '3.9.2'",
    "jupyter-client==8.6.3 ; python_full_version == '3.9.2'",
    "jupyter-console==6.6.3 ; python_full_version == '3.9.2'",
    "jupyter-core==5.7.2 ; python_full_version == '3.9.2'",
    "jupyter-events==0.10.0 ; python_full_version == '3.9.2'",
    "jupyter-leaflet==0.19.2 ; python_full_version == '3.9.2'",
    "jupyter-lsp==2.2.5 ; python_full_version == '3.9.2'",
    "jupyter-server-terminals==0.5.3 ; python_full_version == '3.9.2'",
    "jupyter-server==2.14.2 ; python_full_version == '3.9.2'",
    "jupyter==1.1.1 ; python_full_version == '3.9.2'",
    "jupyterlab-pygments==0.3.0 ; python_full_version == '3.9.2'",
    "jupyterlab-server==2.27.3 ; python_full_version == '3.9.2'",
    "jupyterlab-widgets==3.0.13 ; python_full_version == '3.9.2'",
    "jupyterlab==4.3.1 ; python_full_version == '3.9.2'",
    "kiwisolver==1.4.7 ; python_full_version == '3.9.2'",
    "lightgbm==3.3.5 ; python_full_version == '3.9.2'",
    "literate-dataclasses==0.0.6 ; python_full_version == '3.9.2'",
    "llvmlite==0.43.0 ; python_full_version == '3.9.2'",
    "locket==1.0.0 ; python_full_version == '3.9.2'",
    "lxml==5.3.0 ; python_full_version == '3.9.2'",
    "mako==1.3.6 ; python_full_version == '3.9.2'",
    "markdown-it-py==3.0.0 ; python_full_version == '3.9.2'",
    "markupsafe==2.0.1 ; python_full_version == '3.9.2'",
    "marshmallow==3.23.1 ; python_full_version == '3.9.2'",
    "matplotlib-inline==0.1.7 ; python_full_version == '3.9.2'",
    "matplotlib==3.4.2 ; python_full_version == '3.9.2'",
    "mdurl==0.1.2 ; python_full_version == '3.9.2'",
    "mistune==3.0.2 ; python_full_version == '3.9.2'",
    "ml-dtypes==0.5.0 ; python_full_version == '3.9.2'",
    "mpmath==1.3.0 ; python_full_version == '3.9.2'",
    "msgpack==1.1.0 ; python_full_version == '3.9.2'",
    "multidict==6.1.0 ; python_full_version == '3.9.2'",
    "munkres==1.1.4 ; python_full_version == '3.9.2'",
    "nbclient==0.10.1 ; python_full_version == '3.9.2'",
    "nbconvert==7.16.4 ; python_full_version == '3.9.2'",
    "nbformat==5.10.4 ; python_full_version == '3.9.2'",
    "ndindex==1.9.2 ; python_full_version == '3.9.2'",
    "ndx-events==0.2.0 ; python_full_version == '3.9.2'",
    "nest-asyncio==1.6.0 ; python_full_version == '3.9.2'",
    "netcdf4==1.7.2 ; python_full_version == '3.9.2'",
    "networkx==3.2.1 ; python_full_version == '3.9.2'",
    "nibabel==5.3.2 ; python_full_version == '3.9.2'",
    "nilearn==0.9.2 ; python_full_version == '3.9.2'",
    "notebook-shim==0.2.4 ; python_full_version == '3.9.2'",
    "notebook==7.0.7 ; python_full_version == '3.9.2'",
    "numba==0.60.0 ; python_full_version == '3.9.2'",
    "numexpr==2.10.0 ; python_full_version == '3.9.2'",
    "nvidia-cublas-cu12==12.4.5.8 ; python_full_version == '3.9.2' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-cupti-cu12==12.4.127 ; python_full_version == '3.9.2' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-nvrtc-cu12==12.4.127 ; python_full_version == '3.9.2' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-runtime-cu12==12.4.127 ; python_full_version == '3.9.2' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cudnn-cu12==9.1.0.70 ; python_full_version == '3.9.2' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cufft-cu12==11.2.1.3 ; python_full_version == '3.9.2' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-curand-cu12==10.3.5.147 ; python_full_version == '3.9.2' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusolver-cu12==11.6.1.9 ; python_full_version == '3.9.2' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusparse-cu12==12.3.1.170 ; python_full_version == '3.9.2' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nccl-cu12==2.21.5 ; python_full_version == '3.9.2' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvjitlink-cu12==12.4.127 ; python_full_version == '3.9.2' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvtx-cu12==12.4.127 ; python_full_version == '3.9.2' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "opencv-python==4.10.0.84 ; python_full_version == '3.9.2'",
    "openpyxl==3.1.5 ; python_full_version == '3.9.2'",
    "opt-einsum==3.4.0 ; python_full_version == '3.9.2'",
    "optuna==4.1.0 ; python_full_version == '3.9.2'",
    "overrides==7.7.0 ; python_full_version == '3.9.2'",
    "packaging==24.2 ; python_full_version == '3.9.2'",
    "pandas==1.5.3 ; python_full_version == '3.9.2'",
    "pandocfilters==1.5.1 ; python_full_version == '3.9.2'",
    "parquet==1.3.1 ; python_full_version == '3.9.2'",
    "parso==0.8.4 ; python_full_version == '3.9.2'",
    "partd==1.4.2 ; python_full_version == '3.9.2'",
    "patsy==1.0.1 ; python_full_version == '3.9.2'",
    "pexpect==4.9.0 ; python_full_version == '3.9.2' and sys_platform != 'win32'",
    "phate==1.0.11 ; python_full_version == '3.9.2'",
    "pillow==11.0.0 ; python_full_version == '3.9.2'",
    "platformdirs==4.3.6 ; python_full_version == '3.9.2'",
    "plotly==5.24.1 ; python_full_version == '3.9.2'",
    "pluggy==1.5.0 ; python_full_version == '3.9.2'",
    "ply==3.11 ; python_full_version == '3.9.2'",
    "polars==0.20.31 ; python_full_version == '3.9.2'",
    "pot==0.9.5 ; python_full_version == '3.9.2'",
    "progressbar2==4.5.0 ; python_full_version == '3.9.2'",
    "prometheus-client==0.21.0 ; python_full_version == '3.9.2'",
    "prompt-toolkit==3.0.48 ; python_full_version == '3.9.2'",
    "propcache==0.2.1 ; python_full_version == '3.9.2'",
    "psutil==6.1.0 ; python_full_version == '3.9.2'",
    "psycopg2-binary==2.9.10 ; python_full_version == '3.9.2'",
    "ptyprocess==0.7.0 ; (python_full_version == '3.9.2' and os_name != 'nt') or (python_full_version == '3.9.2' and sys_platform != 'win32')",
    "pure-eval==0.2.3 ; python_full_version == '3.9.2'",
    "py-cpuinfo==9.0.0 ; python_full_version == '3.9.2'",
    "pyarrow==18.1.0 ; python_full_version == '3.9.2'",
    "pycparser==2.22 ; python_full_version == '3.9.2'",
    "pydantic-core==2.27.1 ; python_full_version == '3.9.2'",
    "pydantic==2.10.2 ; python_full_version == '3.9.2'",
    "pydeps==1.12.20 ; python_full_version == '3.9.2'",
    "pyerfa==2.0.1.5 ; python_full_version == '3.9.2'",
    "pygments==2.18.0 ; python_full_version == '3.9.2'",
    "pygsp==0.5.1 ; python_full_version == '3.9.2'",
    "pymysql==1.1.1 ; python_full_version == '3.9.2'",
    "pynndescent==0.5.13 ; python_full_version == '3.9.2'",
    "pynrrd==0.4.3 ; python_full_version == '3.9.2'",
    "pynwb==2.8.3 ; python_full_version == '3.9.2'",
    "pyparsing==3.2.0 ; python_full_version == '3.9.2'",
    "pysqlite3==0.5.4 ; python_full_version == '3.9.2'",
    "pytest==7.4.4 ; python_full_version == '3.9.2'",
    "python-dateutil==2.9.0.post0 ; python_full_version == '3.9.2'",
    "python-dotenv==1.0.1 ; python_full_version == '3.9.2'",
    "python-json-logger==2.0.7 ; python_full_version == '3.9.2'",
    "python-slugify==8.0.4 ; python_full_version == '3.9.2'",
    "python-utils==3.9.1 ; python_full_version == '3.9.2'",
    "pythreejs==2.4.2 ; python_full_version == '3.9.2'",
    "pytz==2024.2 ; python_full_version == '3.9.2'",
    "pywavelets==1.6.0 ; python_full_version == '3.9.2'",
    "pywin32==308 ; python_full_version == '3.9.2' and platform_python_implementation != 'PyPy' and sys_platform == 'win32'",
    "pywinpty==2.0.14 ; python_full_version == '3.9.2' and os_name == 'nt'",
    "pyyaml==6.0.2 ; python_full_version == '3.9.2'",
    "pyzmq==26.2.0 ; python_full_version == '3.9.2'",
    "referencing==0.35.1 ; python_full_version == '3.9.2'",
    "requests-toolbelt==0.10.1 ; python_full_version == '3.9.2'",
    "requests==2.32.3 ; python_full_version == '3.9.2'",
    "rfc3339-validator==0.1.4 ; python_full_version == '3.9.2'",
    "rfc3986-validator==0.1.1 ; python_full_version == '3.9.2'",
    "rich==13.9.4 ; python_full_version == '3.9.2'",
    "rpds-py==0.21.0 ; python_full_version == '3.9.2'",
    "rsatoolbox==0.1.5 ; python_full_version == '3.9.2'",
    "ruamel-yaml-clib==0.2.12 ; python_full_version == '3.9.2' and platform_python_implementation == 'CPython'",
    "ruamel-yaml==0.18.6 ; python_full_version == '3.9.2'",
    "s-gd2==1.8.1 ; python_full_version == '3.9.2'",
    "s3transfer==0.3.7 ; python_full_version == '3.9.2'",
    "scikit-build==0.18.1 ; python_full_version == '3.9.2'",
    "scikit-image==0.19.3 ; python_full_version == '3.9.2'",
    "scikit-learn==0.24.0 ; python_full_version == '3.9.2'",
    "scipy==1.7.3 ; python_full_version == '3.9.2'",
    "scprep==1.2.3 ; python_full_version == '3.9.2'",
    "seaborn==0.13.2 ; python_full_version == '3.9.2'",
    "semver==3.0.2 ; python_full_version == '3.9.2'",
    "send2trash==1.8.3 ; python_full_version == '3.9.2'",
    "setuptools==75.6.0 ; python_full_version == '3.9.2'",
    "simpleitk==2.4.0 ; python_full_version == '3.9.2'",
    "simplejson==3.19.3 ; python_full_version == '3.9.2'",
    "six==1.16.0 ; python_full_version == '3.9.2'",
    "sniffio==1.3.1 ; python_full_version == '3.9.2'",
    "soupsieve==2.6 ; python_full_version == '3.9.2'",
    "sqlalchemy-utils==0.41.2 ; python_full_version == '3.9.2'",
    "sqlalchemy==2.0.9 ; python_full_version == '3.9.2'",
    "stack-data==0.6.3 ; python_full_version == '3.9.2'",
    "starlette==0.41.3 ; python_full_version == '3.9.2'",
    "statsmodels==0.13.0 ; python_full_version == '3.9.2'",
    "stdlib-list==0.11.0 ; python_full_version == '3.9.2'",
    "swifter==1.4.0 ; python_full_version == '3.9.2'",
    "sympy==1.13.1 ; python_full_version == '3.9.2'",
    "tables==3.9.2 ; python_full_version == '3.9.2'",
    "tabulate==0.9.0 ; python_full_version == '3.9.2'",
    "tasklogger==1.2.0 ; python_full_version == '3.9.2'",
    "tenacity==9.0.0 ; python_full_version == '3.9.2'",
    "tensortools ; python_full_version == '3.9.2'",
    "terminado==0.18.1 ; python_full_version == '3.9.2'",
    "text-unidecode==1.3 ; python_full_version == '3.9.2'",
    "threadpoolctl==3.5.0 ; python_full_version == '3.9.2'",
    "thriftpy2==0.5.2 ; python_full_version == '3.9.2'",
    "tifffile==2024.8.30 ; python_full_version == '3.9.2'",
    "tinycss2==1.4.0 ; python_full_version == '3.9.2'",
    "tomli==2.2.1 ; python_full_version == '3.9.2'",
    "toolz==1.0.0 ; python_full_version == '3.9.2'",
    "torch==2.5.1 ; python_full_version == '3.9.2'",
    "tornado==6.4.2 ; python_full_version == '3.9.2'",
    "tqdm==4.67.1 ; python_full_version == '3.9.2'",
    "traitlets==5.14.3 ; python_full_version == '3.9.2'",
    "traittypes==0.2.1 ; python_full_version == '3.9.2'",
    "triton==3.1.0 ; python_full_version == '3.9.2' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "types-python-dateutil==2.9.0.20241003 ; python_full_version == '3.9.2'",
    "typing-extensions==4.12.2 ; python_full_version == '3.9.2'",
    "umap-learn==0.5.7 ; python_full_version == '3.9.2'",
    "unbalancedgw==0.2.0 ; python_full_version == '3.9.2'",
    "uri-template==1.3.0 ; python_full_version == '3.9.2'",
    "urllib3==1.26.20 ; python_full_version == '3.9.2'",
    "uvicorn[standard]==0.32.1 ; python_full_version == '3.9.2'",
    "uvloop==0.21.0 ; python_full_version == '3.9.2' and platform_python_implementation != 'PyPy' and sys_platform != 'cygwin' and sys_platform != 'win32'",
    "vaex-astro==0.9.3 ; python_full_version == '3.9.2'",
    "vaex-core==4.17.1 ; python_full_version == '3.9.2'",
    "vaex-hdf5==0.14.1 ; python_full_version == '3.9.2'",
    "vaex-jupyter==0.8.2 ; python_full_version == '3.9.2'",
    "vaex-ml==0.18.3 ; python_full_version == '3.9.2'",
    "vaex-server==0.9.0 ; python_full_version == '3.9.2'",
    "vaex-viz==0.5.4 ; python_full_version == '3.9.2'",
    "vaex==4.17.0 ; python_full_version == '3.9.2'",
    "watchfiles==1.0.0 ; python_full_version == '3.9.2'",
    "wcwidth==0.2.13 ; python_full_version == '3.9.2'",
    "webcolors==24.11.1 ; python_full_version == '3.9.2'",
    "webencodings==0.5.1 ; python_full_version == '3.9.2'",
    "websocket-client==1.8.0 ; python_full_version == '3.9.2'",
    "websockets==14.1 ; python_full_version == '3.9.2'",
    "wheel==0.45.1 ; python_full_version == '3.9.2'",
    "widgetsnbextension==4.0.13 ; python_full_version == '3.9.2'",
    "wrapt==1.17.0 ; python_full_version == '3.9.2'",
    "xarray==2023.12.0 ; python_full_version == '3.9.2'",
    "xyzservices==2024.9.0 ; python_full_version == '3.9.2'",
    "yarl==1.18.3 ; python_full_version == '3.9.2'",
    "zipp==3.21.0 ; python_full_version == '3.9.2'",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
tensortools = { git = "https://github.com/ahwillia/tensortools", rev = "f6d2f0a793f5e4b19f56a7178a967a1dd6d39686" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/neurep_gwot_mouse"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "B904",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
